Fixing z-index error

--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,7 @@ body {
 .headline-2 {
   @apply max-w-max;
   background: -webkit-linear-gradient(0deg, #fafafa, #a1a1aa);
-  -webkit-background-clip: text;
+  background-clip: text;
   -webkit-text-fill-color: transparent;
 }
 
@@ -36,6 +36,10 @@ body {
 
 .headline-2 {
   @apply text-3xl lg:text-4xl lg:leading-tight font-semibold;
+}
+
+.title-1 {
+  @apply text-[22px] font-normal;
 }
 
 /* 
